0.5.2
Save tool output geometry.
Added copy to clipboard to tool output window.
Added scrollable text to tool output window.
Remove unwanted borders from doc viewer window.
Wrapped live search.
Added be kind check box to prefs.
Fixed dispapearing edit boxes, when setting prefs.
Removed some debug code.
Done Live search
Updated docs.
Clicking on line number now toggles bookmark.
Done history class.
Started history class.
Fixed new editor menu item.
Updated tab context menu icons.
Added max recent files to prefs.
Fixed dont add file path to recent if already present.
Done dont open duplicate file pref.

0.5.1
Done open recent menu.
Done open recent toolbar icon.
Added recentMenuClass.
Done help.
Removed browser command from prefs now use default browser ( as set by xdg ).
Done About box.
Removed book marks when closing tab.
Single instace class code clean.
Done quit app from cli.
Done load session by name from cli.
Done single instance commands.
Done switch tab while dragging.
Done drop files on toolbar to open.
Done DanD on docs.
Fixed minor visual problem with pole.
Removed setting for path to qt docs, now only set in prefs.
Removed setting path to gsu from configure, now only set in prefs.
Done tool save as.
Done delete tool.
Code clean.
Fixed not saving correct flags for tool.
Done save tool.
Fixed enabling tool options.
Done update tools window when switching tools.
Disabled save session menu if no tabs open.
Added sort tool.
Added verify tool.
Clean tool constants.
Started tools.
Added KKEditClassTools.cpp
Started tools.
Set/get menuitem string now static string.
Added get current line number to QT_document.
Fixed saving current line in save session.
Done sessions.
Fixed blank label in bm menu if bookmarking empty line.
Sorce tree clean up.

0.5.0
Done saving find/replace history.
Done search definition dialog.
Redone open include.
Done find definition in multiple files.
Redone functions menu.
Fixed default shortcuts.
Done toolbar search for api.