@@ -1,4 +1,6 @@
 0.5.2
+Done clear tool output.
+Updated online help.
 Save tool output geometry.
 Added copy to clipboard to tool output window.
 Added scrollable text to tool output window.
